Tweak authors file

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,13 @@
-Original Authors
-----------------
+Authors
+-------
 Alban Diquet - Data Theorem Inc.
 Angela Chow - Yahoo Inc.
 Eric Castro - Data Theorem Inc.
+
+
+Thanks
+------
+Daryl Low - Yahoo Inc.
+Christopher Harrell - Yahoo Inc.
+Plasma Chen - Yahoo Inc.
+
